# Industrial-Robots-Predictive-and-Classifier-System

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
app/: api.py  main.py  style.css
config/: config.yaml
documentation/: docs.txt  documentation.md  implementation.md
frontend/: index.html
frontend/assets/css/: style.css
frontend/assets/js/: api.js
frontend/pages/: analysis.html  control.html  predict.html
scripts/: run_etl.py  serve.py  train.py
src/etl/: clean.py  synthetic_data_generator.py
src/features/: build_features.py
src/modeling/: inference.py  train.py
src/utils/: helpers.py  progress.py
tests/: test_api.py  test_files.ipynb  test_path.py
